[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Obstacle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Obstacle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.591, 14.2485 )

[node name="Obstacle" type="Sprite"]
position = Vector2( 47.3045, 33.1619 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = -1
shape = SubResource( 1 )

[node name="nameLabel" type="Label" parent="."]
margin_left = -19.9947
margin_top = 18.044
margin_right = 20.0053
margin_bottom = 32.044
text = "Name"
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
